[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/3d text.gd" type="Script" id=1]
[ext_resource path="res://Scripts/AK47 ID_2.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Indulta-SemiSerif-boldFFP.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Pickup able objects/Pickup able meshs/AK47_mesh.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.15, 0.25, 2.5 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.15, 0.4, 0.25 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.15, 0.6, 0.25 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.15, 0.2, 0.75 )

[sub_resource type="SphereShape" id=3]
radius = 3.0

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("3d text/Viewport")

[sub_resource type="DynamicFont" id=5]
size = 128
font_data = ExtResource( 3 )

[node name="AK47 ID_2" type="Spatial"]
script = ExtResource( 2 )

[node name="Gun_test ID_2" type="RigidBody" parent="." groups=["Pick_add"]]
mass = 8.0

[node name="CollisionShape" type="CollisionShape" parent="Gun_test ID_2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.280601, -1.01727 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="Gun_test ID_2"]
transform = Transform( 1, 0, 0, 0, 0.973782, 0.227484, 0, -0.227484, 0.973782, 0, -0.429496, 1.2564 )
shape = SubResource( 2 )

[node name="CollisionShape3" type="CollisionShape" parent="Gun_test ID_2"]
transform = Transform( 1, 0, 0, 0, 0.814308, -0.580433, 0, 0.580433, 0.814308, 0, -0.608844, -0.152251 )
shape = SubResource( 6 )

[node name="CollisionShape4" type="CollisionShape" parent="Gun_test ID_2"]
transform = Transform( 1, 0, 0, 0, 0.946272, -0.323372, 0, 0.323372, 0.946272, 0, -0.193251, 2.28042 )
shape = SubResource( 7 )

[node name="3D text position" type="Spatial" parent="Gun_test ID_2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Area" type="Area" parent="Gun_test ID_2"]

[node name="CollisionShape" type="CollisionShape" parent="Gun_test ID_2/Area"]
shape = SubResource( 3 )

[node name="AK47" parent="Gun_test ID_2" instance=ExtResource( 4 )]
transform = Transform( -3.27835e-07, 0, -7.5, 0, 7.5, 0, 7.5, 0, -3.27835e-07, 0, -0.6, -0.2 )

[node name="3d text" type="Sprite3D" parent="."]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.5, 0, 1, 0 )
visible = false
pixel_size = 0.0218
billboard = 1
texture = SubResource( 4 )

[node name="Viewport" type="Viewport" parent="3d text"]
size = Vector2( 1540, 160 )
transparent_bg = true
render_target_v_flip = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="3d text/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
text = "Press \"E\" to pick up gun"

[connection signal="body_entered" from="Gun_test ID_2/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Gun_test ID_2/Area" to="." method="_on_Area_body_exited"]
